[project]
name = "zorobench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "numpy>=2.3.2",
    "openai>=1.102.0",
]

[project.scripts]
zorobench = "zorobench.cli:entry_point"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zorobench*"]
